# Projeto-TechBridge-Back

./: pyproject.toml  requirements.txt  test.db
fast_tech/: app.py  db.py  models.py  schema.py  security.py
migrations/: env.py
migrations/versions/: 30b62babe58b_fix_user_model.py  390ab5889fd3_add_name_column_to_users.py  77038036c823_create_cursos_table.py  c0b4e1985e19_add_name_column_to_users.py  daa662ddbe05_create_companies_table.py  ed77618dd75a_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
